--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -12,7 +12,7 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    step:
+    steps:
     - uses: action/checkout@v2
     - name: Setup Python 3.7
       uses: actions/setup-python@v2
