--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
-    - uses: action/checkout@v2
+    - uses: actions/checkout@v2
     - name: Setup Python 3.7
       uses: actions/setup-python@v2
       with:
